Changes for 1.1beta9:

 - slightly optimised code in evaluate_simple (Alexei)
 - added 'command line' parameter for Linux proc.mem[] (Eugene)
 - added parameter '-t key' for ZABBIX agent (Eugene)
 - added parameters '-h' '-v' for all ZABBIX applications (Eugene)
 - added support of aggregate items (Alexei)
 - do not display disabled triggers and items in overview screens (Eugene)
 - vertical hostnames in overview screens (Eugene)
 - disabling/enabling template items (Eugene)
 - fixed agregate functions to work with uint data type (Alexei)
 - parameter StartSuckers renamed to StartPollers (Alexei)
 - dropped support of experimental parameter NoTimeWait (Alexei)
 - removed unused escalator (Alexei)
 - removed escalation tables (Alexei)
 - fix compilation if no function atoll() (Alexei)
 - fixed compilation issue in run_command() (Alexei)
 - added vertical text for OVERVIEW (Eugene)
 - fixed items status changing of parent hosts (Eugene)
 - one separated poller process for unreachable hosts (Alexei)
 - better function is_double() (Alexei)
 - fixed host conditions in actions (Alexei)
 - improved filter by hosts and groups (Eugene)
 - fixed processing of trapped items when a key contains '\' (Alexei)
 - added latest values filtring/marking of log history (Eugene)
 - developed multiple log history viewing (Eugene)

Changes for 1.1beta8:

 - moved installation of images to data.sql (Alexei)
 - fixed highly unefficient check of permissions (Alexei)
 - developed remote commads execution on specific actions (Eugene)
 - added "URL" module for screens (Eugene)
 - added trigger selecton from popup (Eugene)
 - improved popup selection (Eugene)
 - improved "IT services" configuration (Eugene)
 - added "Data overview" for screens (Eugene)
 - added "Triggers overview" for screens (Eugene)
 - added blinking into Trigger overview (Eugene)
 - added screen displaying in other screen (Eugene)
 - improved Overview table header, vertical text added (Eugene)